# musical-notes

./: .readthedocs.yaml  LICENSE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pipeline.yaml
docs/: 01_tutorial.md  02_contrib.md  index.md
docs/api/: harmonic_field.md
docs/templates/: cards.html  installation.md
musical_notes/: chords.py  cli.py  convert_degrees.py  half_step.py  harmonic_field.py  minors.py  scales.py  triad.py  triads.py
tests/: test_chords.py  test_cli.py  test_scales.py
workflow/: README.md
